--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="carte">
-        <img src="asset/plage.jpg" alt="Photo de plage" class="imgcarte">
+        <img src="asset/plage.jpg" alt="Photo de plage" class="imgcarte170">
         <h2>Voyage en Martinique</h2>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius, sunt, odio consequatur praesentium aliquam aspernatur quod minima laudantium quos nam reprehenderit, aut deserunt inventore sed optio itaque error eum? Cumque!</p>
         <a href="visiter le lieu">Visiter le lieu</a>
